testsuite/tests/patsyn/should_fail/T10426.stderr

T10426.hs:3:9: error: [GHC-13248]
    pattern synonym 'where' clause cannot be empty
    In the pattern synonym declaration for:  Id
